🧯  JavaFX lib + Kam1n0 WorkBench JDK11 fix + exe wrapper fix (#217)
* Create msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Add files via upload

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Update msbuild.yml

* Create msbuild-test.yml

* Update msbuild.yml

* upgraded lanunch4j exe for jdk11

* added javafx libs directly

* fixed workbench jdk11 issues